fix to footer spacing issue

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -29,6 +29,7 @@
 }
 
 #project-div{
+	text-decoration: none;
 	box-sizing: border-box;
 	border: 1px solid #DCDEDD;
 	background-color: white;
