--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -9,6 +9,7 @@
 	display: block;
 	flex-direction: column;
 	padding: 30px;
+	margin-bottom: 30vh;
 }
 
 #secondary-form{
